--- a/index.html
+++ b/index.html
@@ -1,48 +1,68 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="utf-8">
-    <!--Das ist ein Kommentar -->
-    <title>food travel balance</title>
-    <meta name="description" content="Food and Travel Blog">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/css/style.css">
 
-  </head>
-  <body>
-    <header id="header">
-      <div class="container">
-        <a href="#">
-          <img src="assets/img/logo.svg" alt="Logo Kochmütze"width="50" title="Startseite">
+<head>
+  <meta charset="utf-8">
+  <!--Das ist ein Kommentar -->
+  <title>food travel balance</title>
+  <meta name="description" content="Food and Travel Blog">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="assets/css/style.css">
+
+</head>
+
+<body>
+  <header id="header">
+    <div class="container">
+      <a href="#">
+          <img src="assets/img/logo.svg" alt="Logo Kochmütze"width="50" title="Startseite" id="Logo">
         </a>
-        <nav>
-          <button type="button" name="button">
-            <img src="assets/img/menu.svg" alt="Menü" height="40">
-          </button>
-          <ul>
-            <li>
-              <a href="#" id="Startseite">
+
+      <button type="button" name="button" id="burger">
+          <img src="assets/img/menu.svg" alt="Menü" height="40">
+        </button>
+
+
+      <nav id="navigation">
+        <ul>
+          <li>
+            <a href="#">
                 Home
               </a>
-            </li>
-            <li>
-              <a href="#">
+          </li>
+          <li>
+            <a href="#">
                 Rezepte
               </a>
-            </li>
-            <li>
-              <a href="#">
+          </li>
+          <li>
+            <a href="#">
                 Kategorien
               </a>
-            </li>
-            <li>
-              <a href="#">
+          </li>
+          <li>
+            <a href="#">
                 Über uns
               </a>
-            </li>
-          </ul>
-        </nav>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section id="hero">
+      <div class="hero-box">
+        <h1>Die besten Rezepte für Webworker</h1>
+        <p>Es gibt mehr als Pizza & Ravioli.</p>
+        <a href="#">Entdecke die Leckereien</a>
       </div>
-    </header>
-  </body>
+
+    </section>
+  </main>
+
+  <script type="text/javascript" src="assets/js/menu.js">
+  </script>
+</body>
+
 </html>
