Änderungen 2. Wo Montag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Food and Travel Blog">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/style.css">
-
+  <link rel="stylesheet" href="assets/fonts/icons.css">
 </head>
 
 <body>
@@ -81,11 +81,140 @@
 
         </article>
 
+        <article class="card">
+          <a href="#">
+        <img src="assets/img/burger.jpg" alt="Burger">
+      </a>
+
+          <h3>
+      <a href="#">Mega gute Burger</a>
+    </h3>
+
+          <p>
+            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
+          </p>
+
+          <a href="#" class="button">Zum Rezept</a>
+
+        </article>
+
+        <article class="card">
+          <a href="#">
+        <img src="assets/img/reispfanne-lissabon.jpg" alt="Reispfanne">
+      </a>
+
+          <h3>
+      <a href="#">Reispfanne für alle Nerds</a>
+    </h3>
+
+          <p>
+            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
+          </p>
+
+          <a href="#" class="button">Zum Rezept</a>
+
+        </article>
+
+        <article class="card">
+          <a href="#">
+        <img src="assets/img/pancakes.jpg" alt="Pancakes">
+      </a>
+
+          <h3>
+      <a href="#">Total leckere Pancakes</a>
+    </h3>
+
+          <p>
+            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
+          </p>
+
+          <a href="#" class="button">Zum Rezept</a>
+
+        </article>
+
+        <article class="card">
+          <a href="#">
+        <img src="assets/img/pancakes.jpg" alt="Pancakes">
+      </a>
+
+          <h3>
+      <a href="#">Total leckere Pancakes</a>
+    </h3>
+
+          <p>
+            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
+          </p>
+
+          <a href="#" class="button">Zum Rezept</a>
+
+        </article>
+
+        <article class="card">
+          <a href="#">
+        <img src="assets/img/pancakes.jpg" alt="Pancakes">
+      </a>
+
+          <h3>
+      <a href="#">Total leckere Pancakes</a>
+    </h3>
+
+          <p>
+            <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</a>
+          </p>
+
+          <a href="#" class="button">Zum Rezept</a>
+
+        </article>
+
+
+
       </div>
 
     </section>
   </main>
 
+  <aside class="widget">
+    <h2>Kein Rezept mehr verpassen</h2>
+    <p>Hol Dir unseren Newsletter</p>
+    <form class="newsletter" action="https://www.google.com/" method="get">
+      <input type="email" name="email" value="" placeholder="Deine E-Mailadresse">
+      <button class="button" type="submit" name="newsletterbutton">abonnieren</button>
+    </form>
+  </aside>
+
+  <footer>
+    <div class="container">
+      <nav id="nav-footer">
+        <ul>
+          <li>
+            <a href="#">Impressum</a>
+          </li>
+          <li>
+            <a href="#">Datenschutz</a>
+          </li>
+          <li>
+            <a href="#">Kontakt</a>
+          </li>
+        </ul>
+      </nav>
+
+      <nav id="nav-social">
+        <ul>
+          <li class="icon-facebook">
+        <a href="https://www.facebook.com/" target="_blank"></a>
+        </li>
+        <li class="icon-instagram">
+        <a href="https://www.instagram.com/foodtravelbalance/" target="_blank" ></a>
+      </li>
+      <li class="icon-youtube">
+      <a href="https://www.youtube.de/" target="_blank" ></a>
+    </li>
+        </ul>
+
+      </nav>
+    </div>
+
+  </footer>
 
   <script type="text/javascript" src="assets/js/menu.js">
   </script>
