--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/fonts/icons.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Marvel" rel="stylesheet">
+
 </head>
 
 <body>
   <header id="header">
     <div class="container">
       <a href="#">
-          <img src="assets/img/logo.svg" alt="Logo Kochmütze"width="50" title="Startseite" id="Logo">
+          <img src="assets/img/logo.svg" alt="Logo Kochmütze"width="50" title="Startseite" id="logo">
         </a>
 
       <button type="button" name="button" id="burger">
@@ -201,14 +204,14 @@
       <nav id="nav-social">
         <ul>
           <li class="icon-facebook">
-        <a href="https://www.facebook.com/" target="_blank"></a>
-        </li>
-        <li class="icon-instagram">
-        <a href="https://www.instagram.com/foodtravelbalance/" target="_blank" ></a>
-      </li>
-      <li class="icon-youtube">
-      <a href="https://www.youtube.de/" target="_blank" ></a>
-    </li>
+            <a href="https://www.facebook.com/" target="_blank"></a>
+          </li>
+          <li class="icon-instagram">
+            <a href="https://www.instagram.com/foodtravelbalance/" target="_blank"></a>
+          </li>
+          <li class="icon-youtube">
+            <a href="https://www.youtube.de/" target="_blank"></a>
+          </li>
         </ul>
 
       </nav>
